--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.0"
+    "react-native-screens": "^4.9.0",
+    "react-native-timer-picker": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
