--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.78.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.0",
-    "react-native-timer-picker": "^2.1.0"
+    "react-native-timer-picker": "^2.1.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
