--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.0",
     "react-native-timer-picker": "^2.1.0",
